tdf#165077 Align applied options to dialog

Options in tools/.../draw|impress/general do not overwrite
flags not supported in the dialog any longer.

Change-Id: Ia1e8e678dd47e58d6201a36e4c57501d27429759
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181440
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 7957b996cf53cdd4952817b15b41a4581316e3b3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182339
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>